# git-dit

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  INSTALL  LICENSE  Makefile  README  README.md  git-dit  git-dit-check-message  git-dit-create-message  git-dit-create-message.sh  git-dit-extract-trailers  git-dit-fetch  git-dit-find-tree-init-hash  git-dit-get-issue-metadata  git-dit-get-issue-tree-init-hashes  git-dit-list  git-dit-list-issues  git-dit-new  git-dit-new-issue  git-dit-prepare-metadata  git-dit-push  git-dit-reply  git-dit-show  git-dit-show-issue  git-dit-tag  git-dit.1.md  mkmanpage.rs
doc/: README.md  caveats.md  datamodel.md  issues.md  use-cases.md
examples/hooks/: update
lib/: Cargo.toml  LICENSE  README.md
lib/src/: README.md  error.rs  first_parent_iter.rs  gc.rs  issue.rs  iter.rs  lib.rs  remote.rs  repository.rs  test_utils.rs  trailer.rs  utils.rs
lib/src/message/: accumulation.rs  block.rs  line.rs  line_processor.rs  metadata.rs  mod.rs  quoted.rs  trailer.rs
lib/src/trailer/: accumulation.rs  filter.rs  mod.rs  spec.rs
src/: README.md  abort.rs  callbacks.rs  cli.yaml  editor.rs  error.rs  filters.rs  gc.rs  issue.rs  iter.rs  lib.rs  logger.rs  main.rs  msgtree.rs  programs.rs  reference.rs  repository.rs  util.rs  utils.rs  write.rs
src/display/: formatter.rs  message.rs  mod.rs  msgtree.rs
src/gitext/: callbacks.rs  mod.rs
src/message/: block.rs  mod.rs
src/system/: abort.rs  logger.rs  mod.rs  programs.rs  write.rs
src/trailer/: accumulation.rs  iter.rs  mod.rs  spec.rs
