[package]
name = "git-dit"
version = "0.2.1"
description = "A CLI frontend for libgitdit - a distributed issue tracker"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Julian Ganz <neither@nut.email>"]

build = "mkmanpage.rs"

[features]
manpage = []

[workspace]
members = [
    "lib"
]

[dependencies]
chrono = "0.3"
error-chain = "0.10"
git2 = "0.6"
is-match = "0.1"
log = "0.3"

[dependencies.clap]
version = "2.23"
default-features = false
features = [ "suggestions", "color", "yaml" ]

[dependencies.libgitdit]
path = "./lib/"

