[package]
name = "git-dit"
version = "0.4.0"
description = "A CLI frontend for libgitdit - a distributed issue tracker"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Julian Ganz <neither@nut.email>"]

build = "mkmanpage.rs"

[features]
manpage = []

[workspace]
members = [
    "lib"
]

[dependencies]
atty = "0.2"
chrono = "0.4"
error-chain = "0.12"
git2 = "0.7"
is-match = "0.1"
lazy_static = "1"
log = "0.4"
regex = "1"

[dependencies.clap]
version = ">=2.23"
default-features = false
features = [ "suggestions", "color", "yaml" ]

[dependencies.libgitdit]
path = "./lib/"

