[package]
name = "libgitdit"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Julian Ganz <neither@nut.email>"]

workspace = "./.."

repository    = "https://github.com/neithernut/git-dit/tree/master/lib"
readme        = "./README.md"
license       = "MPL-2.0"

[dependencies]
log = "0.3"
git2 = "0.6"
error-chain = "0.10"
