[package]
name = "libgitdit"
version = "0.4.0"
description = "A library for distributed issue tracking in git"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Julian Ganz <neither@nut.email>"]

workspace = "./.."

repository    = "https://github.com/neithernut/git-dit/tree/master/lib"
readme        = "./README.md"
license       = "MPL-2.0"

[dependencies]
git2 = "0.6"
error-chain = "0.11"
regex = "0.2"
lazy_static = "1.0"
