[package]
name = "libgitdit"
version = "0.4.0"
description = "A library for distributed issue tracking in git"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Julian Ganz <neither@nut.email>"]

workspace = "./.."

repository    = "https://github.com/neithernut/git-dit/tree/master/lib"
readme        = "./README.md"
license       = "MPL-2.0"

[dependencies]
log = "0.4"
git2 = "0.7"
error-chain = "0.12"
regex = "1"
lazy_static = "1"
